--- a/IntroToPy/Randoms_3.ipynb
+++ b/IntroToPy/Randoms_3.ipynb
@@ -29,10 +29,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4fee425f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 44 unique random generated in a sequence of 100 iterations\n"
+     ]
+    }
+   ],
    "source": [
     "randoms_map, count = load_randoms(\"randoms_db.txt\")\n",
     "print(f\"Loaded {len(randoms_map.keys())} unique random generated in a sequence of {count} iterations\")"
@@ -48,10 +56,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "864b67fa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Count of unique randoms: 44\n",
+      "Min random: 15; Max random: 65\n",
+      "Mean of the sequence: 39.02272727272727\n",
+      "Median of the sequence: 38.5\n",
+      "Standard Deviation of the sequence: 15.229238458206416\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"Count of unique randoms: {len(randoms_map.keys())}\")\n",
     "sorted_randoms = sorted(randoms_map.keys())\n",
@@ -75,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "7aeb2cbc",
    "metadata": {},
    "outputs": [],
@@ -98,10 +118,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c4aceec9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "random 42 occurred 6 times\n",
+      "random 16 occurred 5 times\n",
+      "random 60 occurred 5 times\n",
+      "random 52 occurred 5 times\n",
+      "random 23 occurred 4 times\n",
+      "random 28 occurred 4 times\n",
+      "random 39 occurred 4 times\n",
+      "random 58 occurred 4 times\n",
+      "random 24 occurred 3 times\n",
+      "random 64 occurred 3 times\n",
+      "random 57 occurred 3 times\n",
+      "random 53 occurred 3 times\n",
+      "random 50 occurred 3 times\n",
+      "random 29 occurred 3 times\n",
+      "random 17 occurred 2 times\n",
+      "random 47 occurred 2 times\n",
+      "random 49 occurred 2 times\n",
+      "random 65 occurred 2 times\n",
+      "random 33 occurred 2 times\n",
+      "random 55 occurred 2 times\n"
+     ]
+    }
+   ],
    "source": [
     "lines = [\n",
     "    f'random {r[\"value\"]} occurred {r[\"count\"]} times'\n",
@@ -127,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
